--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4336,6 +4336,7 @@ button.disabled {
 .admin-panel .keys {
     position: relative;
     padding-top: 10px;
+    width: 100%;
 }
 
 .admin-panel .keys .create-product-key-modal {
@@ -4478,7 +4479,6 @@ button.disabled {
     padding: 20px;
     padding-top: 150px;
     background-color: #1C1C24;
-    margin-bottom: 200px;
     position: relative;
     border-radius: 10px;
 }
@@ -4515,6 +4515,7 @@ button.disabled {
 .admin-panel .keys .products .product .buttons {
     display: flex;
     justify-content: space-between;
+    width: 100%;
 }
 
 .admin-panel .keys .products .product .buttons .button {
