--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -631,6 +631,8 @@ template {
     line-height: 24px;
     font-family: Roboto, sans-serif;
     width: 330px;
+    max-height: 72px;
+    overflow: hidden;
 }
 
 .popular-products-slider .popular-product .buttons {
@@ -1441,6 +1443,7 @@ button.disabled {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
 }
 
 .home .slider-wrap .info .popular-products {
@@ -3318,6 +3321,9 @@ button.disabled {
     color: #B5B5BE;
     font-family: 'Roboto', sans-serif;
     margin-top: 15px;
+    max-height: 72px;
+    overflow: hidden;
+
 }
 
 .dashboard .main .product-info .popular-products .popular-product .buttons {
