--- a/src/styles/slick-slider.css
+++ b/src/styles/slick-slider.css
@@ -162,6 +162,8 @@
     line-height: 24px;
     font-family: Roboto, sans-serif;
     width: 330px;
+    max-height: 72px;
+    overflow: hidden;
 }
 
 .popular-products-slider .popular-product .buttons {
