--- a/src/styles/slick-slider.css
+++ b/src/styles/slick-slider.css
@@ -162,7 +162,7 @@
     line-height: 24px;
     font-family: Roboto, sans-serif;
     width: 330px;
-    max-height: 72px;
+    min-height: 72px;
     overflow: hidden;
 }
 
