--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -6659,9 +6659,6 @@ button.disabled {
     display: flex;
     flex-direction: column;
     margin-top: 20px;
-}
-
-.admin-panel .edit-product .editing-product-form .change-product .field-wrap label {
     font-weight: 500;
     font-size: 20px;
     line-height: 36px;
@@ -6674,6 +6671,10 @@ button.disabled {
     color: #1C1C24;
     padding-left: 10px;
     width: 100%;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 36px;
+    letter-spacing: .1px;
 }
 
 .admin-panel .edit-product .editing-product-form .change-product .field-wrap.description-field {
