--- a/src/styles/slick-slider.css
+++ b/src/styles/slick-slider.css
@@ -137,6 +137,7 @@
     position: relative;
     min-width: 370px;
     max-width: 370px;
+    align-items: center;
 }
 
 .popular-products-slider .slick-slide {
@@ -154,6 +155,8 @@
     line-height: 24px;
     max-height: 24px;
     overflow: hidden;
+    word-break: break-all;
+    width: 330px;
 }
 
 .popular-products-slider .popular-product .description {
@@ -171,6 +174,7 @@
 .popular-products-slider .popular-product .buttons {
     display: flex;
     justify-content: space-between;
+    width: 330px;
 }
 
 .popular-products-slider .popular-product .buttons .button {
