--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -7160,7 +7160,6 @@ button.disabled {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 2px 0;
 }
 
 .admin-panel .product-news .news-wrap .table .changes .change .action .button {
@@ -7188,6 +7187,15 @@ button.disabled {
     height: 424px;
     margin-top: 195px;
     margin-left: 30px;
+}
+
+@media (max-width: 1500px) {
+    .admin-panel .product-news .news-wrap {
+        flex-direction: column;
+    }
+    .admin-panel .product-news .news-wrap .product {
+        margin: 195px auto 0;
+    }
 }
 
 .admin-panel .product-news .news-wrap .product .cover {
