--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -7308,6 +7308,7 @@ button.disabled {
     line-height: 36px;
     letter-spacing: .1px;
     position: relative;
+    height: 100%;
 }
 
 .admin-panel .action-logs .search {
@@ -7354,11 +7355,15 @@ button.disabled {
     flex-direction: column;
     margin-top: 20px;
     transition: 300ms;
+    height: calc(100% - 30px - 80px);
+    /* 100% - margin-top: 20px + 10px - footer: height: 80px */
 }
 
 .admin-panel .action-logs .table {
     display: flex;
     flex-direction: column;
+    height: 100%;
+    justify-content: space-between;
 }
 
 .admin-panel .action-logs .table .heading {
